--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-<h1>Design your tasdfsdco!</h1>
+<h1>Design your taco!</h1>
 <img th:src="@{/images/TacoCloud.png}"/>
 
 <!-- tag::formTag[] -->
