--- a/src/main/resources/templates/design.html
+++ b/src/main/resources/templates/design.html
@@ -82,6 +82,11 @@
     </div>
     <!-- tag::closeFormTag[] -->
 </form>
+
+<form method="POST" th:action="@{/logout}">
+    <input type="submit" value="Logout"/>
+</form>
+
 <!-- end::closeFormTag[] -->
 </body>
 </html>
